--- a/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
@@ -14,13 +14,44 @@
         android:padding="16dp">
 
         <LinearLayout
-            android:id="@+id/firstEuroPrintEdit"
+            android:id="@+id/TenEuroPrintEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" >
+
+            <TextView
+                android:id="@+id/txtPrint10Euro"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Print 10€:"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <com.travijuu.numberpicker.library.NumberPicker
+                android:id="@+id/print_number_picker_10"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                numberpicker:min="0"
+                numberpicker:max="10"
+                numberpicker:value="5"
+                numberpicker:unit="1"
+                numberpicker:focusable="false"
+                numberpicker:custom_layout = "@layout/number_picker_layout"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/firstEuroPrintEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/TenEuroPrintEdit" >
 
             <TextView
                 android:id="@+id/txtPrint5Euro"
@@ -103,6 +134,17 @@
                 numberpicker:unit="1"
                 numberpicker:focusable="false"
                 numberpicker:custom_layout = "@layout/number_picker_layout"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/fourthEuroPrintEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/thirdEuroPrintEdit" >
 
         </LinearLayout>
 
