--- a/detoks/src/main/res/layout/fragment_admin.xml
+++ b/detoks/src/main/res/layout/fragment_admin.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.button.MaterialButton
-        android:text="View tokens"
+        android:text="View Tokens"
         style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonTokenView"
-        app:layout_constraintStart_toStartOf="@+id/buttonTokenCreate"
-        app:layout_constraintEnd_toEndOf="@+id/buttonTokenCreate"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="200dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonTokenCreate"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:text="Create Token"
@@ -22,11 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonTokenCreate"
-        app:layout_constraintBottom_toTopOf="@+id/buttonTokenView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="142dp"
-        android:layout_marginEnd="142dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="132dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonTokenView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
