--- a/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
@@ -179,6 +179,25 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/errorText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/red"
+            android:paddingLeft="5dp"
+            android:paddingTop="2dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="2dp"
+            android:text="Error"
+            android:textAlignment="textStart"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/buttonLayout" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
