--- a/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/print_money_fragment.xml
@@ -191,7 +191,7 @@
             android:paddingTop="2dp"
             android:paddingRight="5dp"
             android:paddingBottom="2dp"
-            android:text="Error"
+            android:text=""
             android:textAlignment="textStart"
             android:textColor="@color/white"
             android:textStyle="bold"
