managed to work the transaction history and web of trust

--- a/offlinedigitaleuro/src/main/res/layout/item_transaction.xml
+++ b/offlinedigitaleuro/src/main/res/layout/item_transaction.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackground"
     android:orientation="vertical"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/txtAmount"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="20.00"
+        android:text=""
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/txtPeerId"
@@ -40,7 +38,7 @@
         android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:textColor="#AAAAAA"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/txtPeerId"
@@ -53,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:ellipsize="end"
         android:lines="1"
         android:textColor="@color/text_secondary"
