--- a/offlinedigitaleuro/src/main/res/layout/transactions_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/transactions_fragment.xml
@@ -19,7 +19,7 @@
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your balance:"
+            android:text="@string/your_balance"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/txtBalance"
@@ -30,7 +30,7 @@
             android:id="@+id/txtBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20.00"
+            android:text=""
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
