--- a/offlinedigitaleuro/src/main/res/layout/accept_euro_fragment.xml
+++ b/offlinedigitaleuro/src/main/res/layout/accept_euro_fragment.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="0.0"
+                android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
