delete not used files, plus refactor a little bit the ui for admin

--- a/detoks/src/main/res/layout/fragment_token_list.xml
+++ b/detoks/src/main/res/layout/fragment_token_list.xml
@@ -55,4 +55,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/balanceLayout" />
+
+    <com.google.android.material.button.MaterialButton
+        android:text="Create Token"
+        style="@style/Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonTokenCreate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.96" />
 </androidx.constraintlayout.widget.ConstraintLayout>
